--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,13 @@ logging.level.root=info
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
+# DB
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mariadb://14.36.141.71:10070/gdj70_final_2
+spring.datasource.username=web_user
+spring.datasource.password=pass
 
+# MYBATIS
+# mapper location
+mybatis.mapper-locations=mapper/*_mapper.xml
+# mybatis.mapper-locations=mapper/**/*_mapper.xml
