--- a/pom.xml
+++ b/pom.xml
@@ -52,18 +52,18 @@
 		</dependency>
 		
 		<!-- MyBatis -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.3.1</version>
-		</dependency> -->
+		</dependency>
 		
 		<!-- Maria DB -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<scope>runtime</scope>
-		</dependency> -->
+		</dependency>
 		
 		
 		
