--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
+# view
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.jsp
+
 
 # logger
 logging.level.root=info
-
-
-spring.mvc.view.prefix=/views/
-spring.mvc.view.suffix=.jsp
 
 # DB
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
