완료 - Interceptor / login session

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.url=jdbc:log4jdbc:mariadb://14.36.141.71:10070/gdj70_final_2
 spring.datasource.username=web_user
 spring.datasource.password=pass
 
+# type-aliase
+mybatis.type-aliases-package=com.behit.*.dto
+
 # MYBATIS
 # mapper location
 mybatis.mapper-locations=mapper/*_mapper.xml
