웹소켓 컨트롤러 생성 / 의존성 추가

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		
-		
+		<!-- 웹소켓 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		
 
 		<dependency>
