--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ logging.level.root=info
 # DB
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/behit
+## spring.datasource.url=jdbc:log4jdbc:mariadb://14.36.141.71:10070/behit
 spring.datasource.username=web_user
 spring.datasource.password=pass
 
