웹소켓 디펜던시 추가/디비 변경/채팅 관련 추가들

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ logging.level.root=info
 
 # DB
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/behit
-spring.datasource.username=web_user
-spring.datasource.password=pass
+spring.datasource.url=jdbc:log4jdbc:mariadb://15.164.48.130:3306/final_behit
+spring.datasource.username=behit_user
+spring.datasource.password=gudi@gdj70
 
 # type-aliase
 mybatis.type-aliases-package=com.behit.*.dto
