--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-		
+		<!-- Thymeleaf for HTML templates (optional) 	
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	   	 </dependency>
+		-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
