진행중 - Scheduling 채널 데이터 가져오기

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,15 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
+		
+		<!-- api 인증키 인식 -->
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		
 	</build>
 
 </project>
