--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+## API KEY ###
+resources/application-API-KEY.properties
+
 ### STS ###
 .apt_generated
 .classpath
