크리에이터 수정 진행중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,11 @@ mybatis.mapper-locations=mapper/*_mapper.xml
 
 
 # pool
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.connection-timeout=60000
+#spring.datasource.hikari.idle-timeout=600000
+#spring.datasource.hikari.max-lifetime=1800000
 
 #API KEY
 spring.profiles.include=API-KEY
+
