--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,12 @@ logging.level.root=info
 
 # DB
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:log4jdbc:mariadb://15.164.48.130:3306/final_behit
-#spring.datasource.username=behit_user
-#spring.datasource.password=gudi@gdj70
-spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/behit
-spring.datasource.username=web_user
-spring.datasource.password=pass
+spring.datasource.url=jdbc:log4jdbc:mariadb://15.164.48.130:3306/final_behit
+spring.datasource.username=behit_user
+spring.datasource.password=gudi@gdj70
+#spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/behit
+#spring.datasource.username=web_user
+#spring.datasource.password=pass
 
 # type-aliase
 mybatis.type-aliases-package=com.behit.*.dto
