--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mariadb://15.164.48.130:3306/final_behit
 spring.datasource.username=behit_user
 spring.datasource.password=gudi@gdj70
-#spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/behit
-#spring.datasource.username=web_user
+#spring.datasource.url=jdbc:log4jdbc:mariadb://3.34.253.72:3306/behit
+#spring.datasource.username=behit
 #spring.datasource.password=pass
 
 # type-aliase
@@ -24,7 +24,7 @@ mybatis.mapper-locations=mapper/*_mapper.xml
 # mybatis.mapper-locations=mapper/**/*_mapper.xml
 
 
-# pool
+# pool	
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.idle-timeout=600000
